--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,3 @@
-/* body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-} */
-
 *,
 *::after,
 *::before {
@@ -24,14 +10,6 @@ body {
   font-family: 'poppins', sans-serif;
   background-color: #f5f5f5;
 }
-
-/* .app-height {
-  height: 137vh;
-} */
-
-/* .home {
-  height: auto;
-} */
 
 .navbar .navbar-brand {
   font-weight: 900;
@@ -68,6 +46,7 @@ body {
 
 .dropdown .nav-link {
   background-color: #c0c0c0 !important;
+  color: #000 !important;
 }
 
 /* CardView style Planet - Cardz*/
@@ -81,20 +60,24 @@ body {
 }
 
 .grid {
-  flex-basis: calc(25% - 10px);
+  flex-basis: calc(25% - 18px);
 }
 
 
-.card img {
-  width: 140px !important;
-  height: 140px !important;
+.card-img {
+  width: 200px !important;
+  height: 200px !important;
 }
 
 .card-title {
-  font-size: 15px !important;
-  line-height: 0.2px !important;
+  font-size: 14px !important;
   margin-top: 0 !important;
 }
+
+.Card-text {
+  font-size: 12px;
+}
+
 
 /* CardBox Styles Character Cards*/
 .grid2 {
@@ -174,7 +157,7 @@ body {
 }
 
 .p-width {
-  width: calc(100% - 288px);
+  width: calc(100% - 200px);
 }
 
 .show-pwidth {
@@ -233,28 +216,25 @@ body {
   margin-right: 90px;
 }
 
-/* Tabz character */
-/* .nav-tabs .nav-link.active{
-  background-color: #c0c0c0 !important;
-  
-} 
-
-.nav-link {
-  color: #000 !important;
-  font-family: 'poppins', sans-serif;
-  font-weight: 600;
-  border-radius: 5px !important;
-  margin-left: 5px !important;
-  border: none !important;
-} */
-
 
 
 /* CardView style Planet - Cardz*/
 
+@media screen and (max-width: 1028px) {
+  .card-img {
+    width: 140px !important;
+    height: 140px !important;
+  }
+}
+
 @media screen and (max-width: 780px) {
   .grid {
     flex-basis: calc(33.3% - 40px);
+  }
+
+  .card-img {
+    width: 140px !important;
+    height: 140px !important;
   }
 }
 
@@ -263,11 +243,21 @@ body {
   .grid {
     flex-basis: calc(50% - 22px);
   }
+
+  .card-img {
+    width: 110px !important;
+    height: 110px !important;
+  }
 }
 
 @media screen and (max-width: 380px){
   .grid {
     flex-basis:auto;
+  }
+
+  .card-img {
+    width: 150px !important;
+    height: 150px !important;
   }
 }
 
