--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@ body {
 
 .grid {
   flex-basis: calc(25% - 18px);
+  position: relative;
 }
 
 
@@ -82,13 +83,13 @@ body {
 /* CardBox Styles Character Cards*/
 .grid2 {
   flex-basis: calc(25% - 18px);
+  position: relative;
 }
 
 .Card {
   overflow: hidden;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   border-radius: 16px;
-  position: relative;
 }
 
 .Card-Text {
@@ -107,7 +108,7 @@ body {
   border-radius: 50px;
   position: absolute;
   right: 1rem;
-  bottom: 1rem;
+  bottom: 2.5rem;
 }
 
 .planet-img {
@@ -147,9 +148,12 @@ body {
 /* Planet Popup */
 .card-container{
   position: fixed;
+  padding: s;
   top: 0;
   right: 0;
   transform: translate(100%);
+  height: 650px;
+  overflow-y: scroll;
 }
 
 .card-container .card {
@@ -157,7 +161,7 @@ body {
 }
 
 .p-width {
-  width: calc(100% - 200px);
+  width: calc(100% - 300px);
 }
 
 .show-pwidth {
@@ -264,7 +268,7 @@ body {
 
 /* CardBox Styles Character Cards*/
 @media screen and (max-width: 780px) {
-  .grid2 {
+   .grid2 {
     flex-basis: calc(33.3% - 40px);
   }
 }
@@ -289,8 +293,15 @@ body {
   }
 }
 
+/* popup */
+@media screen and (max-width: 1030px) {
+  .card-container{ 
+    height: 450px;
+    overflow-y: scroll;
+  }
+}
+
 @media screen and (max-width: 376px) {
-   /* popup */
    .card-container .card-pop{
     width: 20rem !important;
   }
@@ -314,6 +325,6 @@ body {
   .card-container .card-pop{
     width: 18rem !important;
   }
-
+ 
 
 }
